syntax = "proto3";

package proto;

option go_package = "systemSmartContracts";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";


enum VoteType {
    Validator = 0;
    Account   = 1;
}
enum VoteValueType {
    Yes  = 0;
    No   = 1;
    Veto = 2;
}

message GeneralProposal {
    bytes  IssuerAddress  = 1 [(gogoproto.jsontag) = "IssuerAddress"];
    bytes  GitHubCommit   = 2 [(gogoproto.jsontag) = "GitHubCommit"];
    uint64 StartVoteNonce = 3 [(gogoproto.jsontag) = "StartVoteNonce"];
    uint64 EndVoteNonce   = 4 [(gogoproto.jsontag) = "EndVoteNonce"];
    bytes  Yes            = 5 [(gogoproto.jsontag) = "Yes", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes  No             = 6 [(gogoproto.jsontag) = "No", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes  Veto           = 7 [(gogoproto.jsontag) = "Veto", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bool   Voted          = 8 [(gogoproto.jsontag) = "Voted"];
    repeated bytes Votes  = 9 [(gogoproto.jsontag) = "Votes"];
    bytes  TopReference   = 10 [(gogoproto.jsontag) = "TopReference"];
    bool   Closed         = 11 [(gogoproto.jsontag) = "Closed"];
}

message WhiteListProposal {
    bytes WhiteListAddress = 1 [(gogoproto.jsontag) = "WhiteListAddress"];
    bytes ProposalStatus   = 2 [(gogoproto.jsontag) = "ProposalStatus"];
}

message HardForkProposal {
    uint32 EpochToHardFork    = 1 [(gogoproto.jsontag) = "EpochToHardFork"];
    bytes  NewSoftwareVersion = 2 [(gogoproto.jsontag) = "NewSoftwareVersion"];
    bytes  ProposalStatus     = 3 [(gogoproto.jsontag) = "ProposalStatus"];
}

message GovernanceConfig {
    bytes MinQuorum        = 1 [(gogoproto.jsontag) = "MinQuorum", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes MinPassThreshold = 2 [(gogoproto.jsontag) = "MinPassThreshold", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes MinVetoThreshold = 3 [(gogoproto.jsontag) = "MinVetoThreshold", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes ProposalFee      = 4 [(gogoproto.jsontag) = "ProposalFee", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
}

message VoterData {
    bytes  Address  = 1 [(gogoproto.jsontag) = "Address"];
    int32 NumNodes = 2 [(gogoproto.jsontag) = "NumNodes"];
}

message ValidatorData {
    repeated VoterData Delegators = 1 [(gogoproto.jsontag) = "Delegators"];
    int32              NumNodes   = 2 [(gogoproto.jsontag) = "NumNodes"];
}

message VoteDetails {
    VoteValueType Value       = 1 [(gogoproto.jsontag) = "Value"];
    bytes         Power       = 2 [(gogoproto.jsontag) = "Power", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes         Balance     = 3 [(gogoproto.jsontag) = "Balance", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    VoteType      Type        = 4 [(gogoproto.jsontag) = "Type"];
    bytes         DelegatedTo = 5 [(gogoproto.jsontag) = "DelegatedTo"];
}

message VoteData {
    bytes    UsedPower             = 1 [(gogoproto.jsontag) = "UsedPower", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes    TotalYes              = 2 [(gogoproto.jsontag) = "TotalYes", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes    TotalNo               = 3 [(gogoproto.jsontag) = "TotalNo", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bytes    TotalVeto             = 4 [(gogoproto.jsontag) = "TotalVeto", (gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    bool     Claimed               = 5 [(gogoproto.jsontag) = "Claimed"];
    repeated VoteDetails VoteItems = 6 [(gogoproto.jsontag) = "VoteItems"];

}
